correctly align faq elements with short text (#51)

--- a/src/components/faq/QuestionAnswerSection.scss
+++ b/src/components/faq/QuestionAnswerSection.scss
@@ -13,7 +13,7 @@ $highlight-color: #fba8e0;
     display: flex;
     flex-direction: row;
     margin-bottom: 3em;
-    max-width: 800px;
+    width: 800px;
 
     .number {
       color: $highlight-color;
@@ -33,6 +33,14 @@ $highlight-color: #fba8e0;
         color: white;
         margin-top: 1em;
       }
+    }
+  }
+
+  @media only screen and (max-width: $content-breakpoint) {
+    align-items: flex-start;
+
+    .question-answer-element {
+      width: unset;
     }
   }
 }
